[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyckt"
version = "0.1.0"
description = "Python analog circuit synthesis tool (ACST) for topology generation, structural recognition, and partitioning."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
