[metadata]
name = pyckt
version = 0.1.0
description = Python analog circuit synthesis tool (ACST)
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.7
